add portfolio url

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Custom Styles-->
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="shortcut icon" href="http://www.louellalandicho.com/img/favicon.gif" type="image/ico" />
     <title>Louella Landicho | Full Stack Developer</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
             <script> $(document).ready(function(){
@@ -455,8 +456,7 @@
               <div class="card">
 
                 <div class="card-content">
-                  <p><span class="card-title grey-text">Certification in Full Stack Web Development, UC Berkeley Extension</p>
-                  <p class="grey-text">10/2017 - 4/2018</p>                
+                  <p><span class="card-title grey-text">Certification in Full Stack Web Development, UC Berkeley Extension | </span><span class="grey-text">October 2017 - April 2018</span></span></p>     
                 </div>
 
                 <div class="card-content">
