edit description friendfinder

--- a/index.html
+++ b/index.html
@@ -268,9 +268,7 @@
                   <ul>
                     <li>Front-end development in <strong>Materialize CSS</strong></li>
                     <li>Dating app using <strong>Node and Express Servers</strong></li>
-                    <li>NPM Install express</li>
-                    <li>NPM Install body-parser</li>
-                    <li>NPM Install path </li>
+                    <li>NPM Install <strong>express, body-parser, and path</strong></li>
                   <li>Deployed to <strong>Heroku</strong></li>
                   </ul>
                   <div class="card-action">
